argocd/apps/monitoring/ingressroute-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.streamixs.com`)
      kind: Rule
      middlewares:
        - name: pocket-id-auth
          namespace: pocket-id
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls: {}
